--- a/.env
+++ b/.env
@@ -15,12 +15,12 @@ LOG_LEVEL=debug
 # DB_USERNAME=root
 # DB_PASSWORD=
 
-# DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=esuvidhatech_jwellery_esuvidha
-# DB_USERNAME=esuvidhatech_jwellery_esuvidha
-# DB_PASSWORD="x^-gG&ep--D0fy#4"
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=esuvidhatech_jwellery_esuvidha
+DB_USERNAME=esuvidhatech_jwellery_esuvidha
+DB_PASSWORD="x^-gG&ep--D0fy#4"
 
 
 BROADCAST_DRIVER=log
