--- a/.env
+++ b/.env
@@ -8,16 +8,14 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-# DB_CONNECTION=mysql
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
 # DB_DATABASE=jwellery_esuvidha
 # DB_USERNAME=root
 # DB_PASSWORD=
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
+
 DB_DATABASE=esuvidhatech_jwellery_esuvidha
 DB_USERNAME=esuvidhatech_jwellery_esuvidha
 DB_PASSWORD="x^-gG&ep--D0fy#4"
@@ -58,3 +56,11 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+MAIL_MAILER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=esuvidha.official@gmail.com
+MAIL_PASSWORD='imaq vjlp mtre mqok'
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=esuvidha.official@gmail.com
+MAIL_FROM_NAME="Suvidha-Billing"
